Additional fixes after I went through the whole text.

--- a/text/tex/appendix.tex
+++ b/text/tex/appendix.tex
@@ -13,7 +13,7 @@ Following files can be found on the attached DVD:
 		\textbf{/video} & The video  overviewing this work presented at conference Excel@FIT 2016 (.mp4, h264). \\
 		\textbf{/paper} & The paper published at conference Excel@FIT 2016 (.pdf). \\
 		\textbf{/ols/src} & Source code of the OLS divided into separate ROS packages (.cpp, .h, other auxiliary formats). \\
-		\textbf{/ols/data} & Part of the meadow dataset included (.bag). \\
+		\textbf{/ols/data} & Part of the meadow dataset (.bag). \\
 		\textbf{/ols/doc} & The generated documentation of the source code (.html). \\
 		\textbf{/misc/photos} & Various photographs of the OLS taken during development, rectification and testing (.jpg). \\
 		\textbf{/misc/videos} & Various videos documenting the development and testing of the OLS (.mp4, h264). \\
