Fixed wrong hyphenations

--- a/text/tex/OpticalLocalization_BednarikJan.tex
+++ b/text/tex/OpticalLocalization_BednarikJan.tex
@@ -173,7 +173,7 @@
 \abstract[cs]
 {Tato práce představuje semiautonomní systém pro optickou lokalizaci velmi vzdálených pohyblivých cílů za pomocí několika polohovatelných kamer. Kamery byly kalibrovány a zastaničeny pomocí speciálně navržených kalibračních terčů a metodologie, jejímž účelem je minimalizovat hlavní zdroje chyb, jež byly objeveny během důkladné analýzy přesnosti. Detekce cíle probíhá manuálně, zatímco vizuální sledování je automatické a staví na dvou state-of-the-art přístupech. Odhad 3D lokace cíle je založen na triangulaci z více pohledů pracující s nepřesnými měřeními. Základní sestava o dvou kamerových jednotkách byla otestována na statických cílech a pohybujícím se pozemním cíli, přičemž byla přesnost odhadu lokace cíle porovnána s teoretickým modelem. Díky modularitě a přenosnosti je možné systém použít v široké škále situací, jako je například monitoring vytyčeného území, včasná detekce hrozby v bezpečnostních systémech nebo řízení vzdušeného provozu.}
 \abstract[en]
-{This work presents a system for semi-autonomous optical localization of distant moving targets using multiple positionable cameras. The cameras were calibrated and stationed using custom designed calibration targets and methodology with the objective to alleviate the main sources of errors which were pinpointed in thorough precision analysis. The detection of the target is performed manually, while the visual tracking is automatic and it utilizes two state-of-the-art approaches. The estimation of the target location in \mbox{3-space} is based on multi-view triangulation working with noisy measurements. A basic setup consisting of two camera units was tested against static targets and a moving terrestrial target, and the precision of the location estimation was compared to the theoretical model. The modularity and portability of the system allows fast deployment in a wide range of scenarios including perimeter monitoring or early threat detection in defense systems, as well as air traffic control in public space.}
+{This work presents a system for semi-autonomous optical localization of distant moving targets using multiple positionable cameras. The cameras were calibrated and stationed using custom designed calibration targets and methodology with the objective to alleviate the~main sources of errors which were pinpointed in thorough precision analysis. The~detection of the target is performed manually, while the visual tracking is automatic and it utilizes two state-of-the-art approaches. The estimation of the target location in \mbox{3-space} is based on multi-view triangulation working with noisy measurements. A basic setup consisting of two camera units was tested against static targets and a moving terrestrial target, and the precision of the location estimation was compared to the theoretical model. The~modularity and portability of the system allows fast deployment in a wide range of~scenarios including perimeter monitoring or early threat detection in defense systems, as well as air traffic control in public space.}
 
 %Klicova slova (cesky, slovensky ci anglicky)
 \keywords[cs]{optická lokalizace, lokalizace více kamerami, stereovize, sledování objektů, triangulace, odhad pohybu, UAV, fyzikální simulace, ROS, Gazebo, kinematický řetězec, rektifikace kamery}
